add working directory backup

--- a/tutorials/simple_hyperalignment.ipynb
+++ b/tutorials/simple_hyperalignment.ipynb
@@ -453,9 +453,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (nb)",
+   "display_name": "nb",
    "language": "python",
-   "name": "nb"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
